# Twilio_tools

./: .envrc  .gitignore  .warp.md  CLAUDE.md  README.md  pyproject.toml  twilio_cli.py  twiliotroublshooting.md
Dev_Man/plans/completed/: codebase-cleanup-completed.md
Dev_Man/plans/current/: codebase-cleanup-plan.md  nextjs-frontend-plan.md  project-structure-analysis.md  twilioPlan{v1.00}.md  twilioTrustHblookup.md
Dev_Man/plans/pending/: twilioTrustHblookup.md
src/twilio_cli/: __init__.py  cli.py  dev_man_browser.py  main.py
src/twilio_cli/api/: trusthub_inspector.py
src/twilio_cli/cli_commands/: cli_commands.json
src/twilio_cli/utils/: call_log.py  twilio_error_map.json
tests_old/: cli_test_results.json  test_cli_features.sh  test_cli_lookup_error.sh  whatsWorking.py
