[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twilio-tools"
version = "2.0.0"
description = "Comprehensive Twilio management and analysis toolkit with PhoneInfoga integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Twilio CLI Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.12"
dependencies = [
    "twilio>=8.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.7.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
twilio-cli = "twilio_cli.cli:cli"

[project.urls]
Homepage = "https://github.com/yourusername/twilio-tools"
Documentation = "https://github.com/yourusername/twilio-tools#readme"
Repository = "https://github.com/yourusername/twilio-tools"
Issues = "https://github.com/yourusername/twilio-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/twilio_cli"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
